dev-logique-app/app-manifests/base/react-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    spec:
      containers:
        - name: react-app
          image: react-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
