dev-logique-app/app-manifests/base/react-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
