dev-logique-app/app-manifests/base/react-app/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-react-app
spec:
  hosts:
    - "dashoard.logique-rustamapm.com"
  gateways:
    - devops/logique-internal-ingress
  http:
    - route:
        - destination:
            host: react-app
            port:
              number: 80
